--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/cleanup",
-      "schedule": "0 * * * *",
+      "schedule": "0 3 * * *",
       "headers": {
         "Authorization": "Bearer $CRON_SECRET"
       }
