--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.3",
+    "@vercel/config": "^0.0.28",
     "next": "16.1.5",
     "react": "19.2.3",
     "react-dom": "19.2.3"
